...
                android:layout_marginBottom="36dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/round_corner_app_grey_bg"
                    style="@style/ImageViewScaleTypeStyle"
                    app:rivBaseDirection="horizontal"
...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="3"
                    android:background="@drawable/round_corner_app_grey_bg">

                    <EditText
                        android:id="@+id/et_card_name"
                        style="@style/NormalSizeBlackColorTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/iv_clear"
                        android:background="@android:color/transparent"
                        android:hint="@string/cb_please_input_card_name_hint"
...
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cbDivider"/>

            <com.wonders.xlab.cardbag.widget.RatioImageView
                android:id="@+id/iv_bar_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="36dp"
                android:onClick="scanBarCode"
...
                app:rivForegroundText="@string/cb_card_edit_cover_modify_bar_code"
                app:rivForegroundTextSize="@dimen/text_size_large"
                app:rivHorizontalWeight="3"
                app:rivVerticalWeight="1"/>

            <TextView
                android:id="@+id/tv_bar_code"
                style="@style/LargeSizeBlackColorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/cb_bar_code_place_holder"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card_front"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="shotCardFront"
                    style="@style/ImageViewScaleTypeStyle"
                    app:rivBaseDirection="horizontal"
...
                    app:rivForegroundText="@string/cb_card_edit_cover_modify_card_front"
                    app:rivForegroundTextSize="@dimen/text_size_large"
                    app:rivHorizontalWeight="@integer/cbIvHorizontalWeight"
                    app:rivVerticalWeight="@integer/cbIvVerticalWeight"/>

                <com.wonders.xlab.cardbag.widget.RatioImageView
                    android:id="@+id/iv_card_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:onClick="shotCardBack"
                    style="@style/ImageViewScaleTypeStyle"
...
