<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_card_edit_save"
        android:title="@string/cb_menu_text_card_edit_finish"
        app:showAsAction="ifRoom"/>
</menu>